@@ -120,3 +120,9 @@ Below is a short description of the content of each file:
     jsontest.exe from reading test_complex_01.rewrite.
 test_complex_01.process-output: jsontest.exe output, typically useful to
     understand parsing error.
+
+* License
+  =======
+  
+See file LICENSE for details. Basically JsonCpp is licensed under 
+MIT license, or public domain if desired and recognized in your jurisdiction.
